[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "nsysmon"
version = "0.0.0"
authors = [
  { name="devlocalhost" },
]
description = "nSysmon: A Ready-to-Use System Monitor"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/devlocalhost/sysmon"
Issues = "https://github.com/devlocalhost/sysmon/issues"
